--- a/views/newProject.pug
+++ b/views/newProject.pug
@@ -9,7 +9,7 @@ block content
 
 		form.agregar-proyecto(action="/new-project" method="POST")
 			.campo 
-				label(for="name") Nombre proyecto: 
-				input(type="text" id="name" name="name" placeholder="Nombre proyecto")
+				label(for="name") Project's name: 
+				input(type="text" id="name" name="name" placeholder="Project's name")
 			.campo.enviar 
 				input(type="submit" value="Agregar" class="boton")
