--- a/views/tasks.pug
+++ b/views/tasks.pug
@@ -2,4 +2,12 @@ extends layout
 
 block content
 	.contenido-principal
-		h1 #{pageName}
+		h1 #{pageName} - #{project.name}
+		//- pre= vardump(project)
+		//- TODO: form
+		//- TODO: pending list
+
+		//- actions
+		.contenedor-acciones
+			a(href=`/project/edit/${project.id}` class="boton") Edit
+			button#eliminar-proyecto(type="button" class="boton eliminar") Delete
