--- a/views/newProject.pug
+++ b/views/newProject.pug
@@ -1,15 +1,11 @@
 extends layout
 
+include mixins/createProject
+
 block content
 	.contenido-principal
 		h1 #{pageName}
 		if errors
 			each error in errors 
 				.alerta.error=error.texto
-
-		form.agregar-proyecto(action="/new-project" method="POST")
-			.campo 
-				label(for="name") Project's name: 
-				input(type="text" id="name" name="name" placeholder="Project's name")
-			.campo.enviar 
-				input(type="submit" value="Agregar" class="boton")
+		+createProject(project)
