--- a/views/tasks.pug
+++ b/views/tasks.pug
@@ -10,4 +10,4 @@ block content
 		//- actions
 		.contenedor-acciones
 			a(href=`/project/edit/${project.id}` class="boton") Edit
-			button#eliminar-proyecto(type="button" class="boton eliminar") Delete
+			button#eliminar-proyecto(type="button" data-project-url=project.url class="boton eliminar") Delete
