tasks by project

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		link(rel="stylesheet", href="/css/normalize.css")
 		link(rel="stylesheet", href="/css/app.css")
+		link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.7.2/css/all.css', integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr', crossorigin='anonymous')
 		script(src="/dist/bundle.js" defer)
 		title #{pageName}
 	body 
@@ -21,7 +22,7 @@ html(lang="en")
 				.panel.lista-proyectos
 					h2 Projects
 					ul#proyectos.proyectos 
-						if(projects.length > 0)
+						if(projects.length)
 							each project in projects 
 								li 
 									a(href=`/projects/${project.url}`)= project.name
