--- a/views/tasks.pug
+++ b/views/tasks.pug
@@ -3,7 +3,7 @@ extends layout
 block content
 	.contenido-principal
 		h1 #{pageName} - #{project.name}
-		//- pre= vardump(project)
+		//- pre= vardump(tasks)
 
 		form.agregar-tarea(action=`/projects/${project.url}` method="POST")
 			.campo 
@@ -11,8 +11,22 @@ block content
 				input.nombre-tarea(type="text" name="task" placeholder="Task name")
 			.campo.enviar 
 				input.boton.nueva-tarea(type="submit" value="Add")
+		
+		.listado-pendientes 
+			ul
+				if tasks.length
+					each task in tasks 
+						li.tarea
+							p= task.task
+							.acciones
+								if task.state
+									i.far.fa-check-circle.completo
+								else 
+									i.far.fa-check-circle
+								i.fas.fa-trash
+				else 
+					p There is no task for this project
 
-		//- TODO: pending list
 
 		//- actions
 		.contenedor-acciones
