--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html(lang="en")
 	body 
 		header.barra 
 			h1 UpTask - Admin projects 
-			a(href="#") Close session
+			a(href="/close-session") Close session
 		
 		main.contenedor 
 			aside.contenedor-proyectos
