--- a/views/restorePassword.pug
+++ b/views/restorePassword.pug
@@ -4,8 +4,9 @@ html(lang="en")
 		include partials/head
 	body.login
 		.contenedor-formulario 
-			h1 Start session in UpTask
-			
+			h1= pageName 
+			p Add your email to restore the password
+
 			if locals.messages
 				.alertas
 					each category in Object.keys(locals.messages)
@@ -13,15 +14,11 @@ html(lang="en")
 							.alerta(class=`${category}`)
 								p= error
 
-			form#formulario.caja.caja-login(method='POST' action='/start-session')
+			form.caja.caja-login(method='POST' action='/restore-password')
 				.campo 
 					label(for="email") E-mail: 
 					input(type="email" name="email" placeholder="Your email" value= email)
-				.campo 
-					label(for="password") Password: 
-					input(type="password" name="password" placeholder="Your password" value= password)
 				.campo.enviar
-					input.boton(type="submit" value="Start session")
+					input.boton(type="submit" value="Restore password")
 				.campo.acciones 
-					a(href="/create-account") Create account
-					a(href="/restore-password") Forgot password?
+					a(href="/start-session") I remember, back to login
