--- a/views/restorePassword.pug
+++ b/views/restorePassword.pug
@@ -14,7 +14,7 @@ html(lang="en")
 							.alerta(class=`${category}`)
 								p= error
 
-			form.caja.caja-login(method='POST' action='/restore-password')
+			form.caja-login(method='POST' action='/restore-password')
 				.campo 
 					label(for="email") E-mail: 
 					input(type="email" name="email" placeholder="Your email" value= email)
