--- a/views/resetPassword.pug
+++ b/views/resetPassword.pug
@@ -7,6 +7,13 @@ html(lang="en")
 			h1= pageName 
 			p Add new password
 
+			if locals.messages
+				.alertas
+					each category in Object.keys(locals.messages)
+						each error in messages[category]
+							.alerta(class=`${category}`)
+								p= error
+
 			form.caja-login(method="POST")
 				.campo 
 					label(for="password") Password: 
