--- a/views/emails/confirm-account.pug
+++ b/views/emails/confirm-account.pug
@@ -6,10 +6,10 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		style 
 			include ./email.css
-		title Document
+		title Confirm account
 	body 
-		h1 Restore password 
-		p Enter your new password and click link below. Passwords must be a minimum of 8 characters long and are case sensitive. This link is temporary
-		a(href=`${resetUrl}`) reset Password 
-		p If you can't access to this link, visit #{resetUrl}
+		h1 Confirm your account UpTask
+		p You are almost subscribed, only press next button
+		a(href=`${confirmUrl}`) confirm account 
+		p If you can't access to this link, visit #{confirmUrl}
 		p if you did not request this email, you can ignore it
